[package]
name = "holdem"
version = "0.1.2"
authors = ["Vladislav Supalov <v.supalov@gmail.com>"]
keywords = ["cards", "poker"]
description = "Texas Hold'em specific types and logic."
homepage = "https://github.com/th4t/holdem-rs"
license = "MIT"
readme = "README.md"

[lib]
name = "holdem"

[dependencies]
cards = "1.1.2"
